Fix empty membership alignment on channel page

--- a/ui/scss/component/_membership.scss
+++ b/ui/scss/component/_membership.scss
@@ -606,7 +606,6 @@
 
   .join-membership__empty {
     max-width: 539px;
-    margin: 0 auto;
 
     .header--no-memberships {
       font-size: 1.2rem;
